style.css
@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap");
@import url("https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600&display=swap");
@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap');

body {
	max-width: 640px;
	margin: 0px auto 50%;

	font-family: var(--serif);
	font-size: 21px;
	line-height: 1.5;
}

a {
	text-decoration: none;
}

a:visited {
	color: black;
}

header {
	padding-top: 10px;	
}

header h1 {
	text-align: center;
}

main p {
	text-align: center;
}

.blog {
	display: block;
	padding: 15px;

	border-radius: 10px;
	transition: background-color 0.2s ease;
}

.blog:hover {
	background-color: #fafafa;
}

.blog h1 {
	margin-top: 0px;
	font-family: var(--sans);
	font-size: 1.25em;
	text-align: left;
}

.blog span {
	color: #333333;
}

#cowsay {
	display: block;
	padding-top: 40px;

	font-family: monospace;
	font-size: 12px;
	text-align: center;
	white-space: pre;
}

article h1 {
	margin-bottom: 15px;

	font-weight: normal;
}

article h2 {
	margin-bottom: 15px;

	font-family: var(--sans);
}

article .description {
	color: #333333;
}

article img {
	display: block;
	margin: 20px auto;
}

article a {
	position: relative;
}

article a::after {
	background-color: rgba(215, 236, 217, 0.50);
	content: "";
	display: block;
	height: 3px;
	left: 0;
	position: absolute;
	top: 100%;
	transition: all .2s ease;
	width: 100%;
}

article a:hover:after {
	background-color: rgb(215, 236, 217);
}

article .caption {
	color: #333333;
	font-size: 0.85em;
	text-align: center;
}

article blockquote {
	color: #333333;
}

article blockquote div {
	text-align: right;
}

article .footnote {
	margin: 10px auto;
	font-size: 0.8em;
}

::selection {
	background: #d7ecd9;
}

:root {
	--serif: "Source Serif Pro", serif;
	--sans: "Source Sans Pro", sans-serif;
}

